[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lenv-manager"
version = "0.1.0"
description = "Project-scoped Linux environments for Windows developers"
readme = "README.md"
authors = [
    {name = "Pranav Digraskar", email = "digraskarpranav@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
dependencies = [
    
]

[project.urls]
Homepage = "https://github.com/pranavpd24/lenv"
Documentation = "https://github.com/yourusername/lenv/blob/main/README.md"
Repository = "https://github.com/pranavpd24/lenv"

[project.scripts]
lenv = "lenv.cli:main"  # Creates the 'lenv' command